# AutoPyro

./: Akram, R & Faqi, A & Jihad, W & Sherwani, G & Al-Ansari, N, 2021.json  AutoPyro.ipynb  Plot.ipynb  README.md  README_ru.md  Spasennykh, M, Maglevannaia, P, Kozlova, E, Bulatov, T, Leushina, E, Morozov, N, 2021.json  setup.cfg
AutoPyro/: autopyro.mplstyle
AutoPyro/core/: base.py  calculators.py  charts.py  classifiers.py  data.py  decorator.py  equations.py  functions.py  geometries.py  helpers.py  json_models.py  mapping.py  maps.py  models.py  plots.py  plotting.py
AutoPyro/digitizers/: __init__.py  digitizers.py  maps.py  plots.py  vector_files.py
AutoPyro/interactive/: __init__.py  common.py  home.py  main.py  maps.py  plots.py  start.py  tables.py
AutoPyro/interactive/.streamlit/: config.toml
AutoPyro/interactive/pages/: 1_dataframe.py  2_Plots.py  2_plot.py  3_Maps.py
AutoPyro/resources/json/: Bouazizi, I & Moncef, S & Belhaj Mohamed, A, 2014.json  Chen, z & Lavoie, D & Jiang, Ch & Duchesne, M & Malo, M, 2016.json  Maky, A & Sayed, M & Abdullah, Z, 2010.json  Zeb, Sh & Zafar, M & Jehandad, S & Khan, T & Siyar, S & Qadir, A, 2020.json
AutoPyro/resources/plots/: Akram, R & Faqi, A & Jihad, W & Sherwani, G & Al-Ansari, N, 2021.json  Barberes, G & Reis, R & Pimentel, N. & Spigolon, A.L.D. & Fonseca, P. & Karcz, P & Azevedo, M. & Barata, T, 2021.json  create.py  (+1 more)
examples/: Analysis.ipynb  AutoPyro.ipynb  CV.ipynb  Math.ipynb  Plot.ipynb  SVG.ipynb  statistics.ipynb
inkscape/: custom_attribute.inx  custom_attribute.py
