[metadata]
name = AutoPyro
version = 0.6
url = https://github.com/sup3r-g/PetroGeoSim
license = GNU GPLv3
author = sup3r-g
description = Automatic pyrolysis data interpretation suite
long_description = file: README.md
long_description_content_type = text/markdown
platforms = any
classifiers =
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Topic :: Software Development
    Topic :: Scientific/Engineering
    Development Status :: 4 - Beta
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: CPython

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.10
install_requires =
    catboost
    geopandas
    matplotlib
    numpy
    scipy
    pandas
    shapely
    skimage
    svgpathtools
    mpltern
    # matplotlib-label-lines
    matplotlib-inline-labels

[options.packages.find]
exclude =
    docs*
    examples*
    tests*